# docsmcp

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-vector.txt  requirements.txt
docs/: api-reference.md  architecture.md  configuration.md  installation.md  mcp-setup.md  self-hosting.md
examples/: claude-desktop.json  nginx.conf
examples/projects/: fastapi.json  onesignal.json
scripts/: backup.sh  install.sh  uninstall.sh
src/: __init__.py  cli.py  config.py  fts_indexer.py  indexer.py  main.py  mcp_server.py  mcp_stdio.py  models.py  scraper.py  storage.py
src/static/: style.css
src/templates/: index.html
src/templates/partials/: project_row.html  search_results.html
tests/: conftest.py  test_api.py  test_fts.py
